<resources>
    <string name="app_name">忘不了</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_tv_title">find_tv_title</string>
    <string name="find_tv_text">find_tv_text</string>
    <string name="news_desc">desc</string>
    <string name="news_title">title</string>
    <string name="name_find_title">发现 - 冲浪</string>
    <string name="name_me_title">我</string>
    <string name="name_emotion_title">便签</string>
    <string name="aditor_save_btn">保存</string>
    <string name="aditor_delete_btn">取消保存</string>
    <string name="aditor_textV">请选择你现在的心情：</string>
    <string name="aditor_btn_happy">快乐</string>
    <string name="aditor_btn_sad">伤心</string>
    <string name="aditor_btn_press">压力</string>
    <string name="aditor_btn_relaxed">放松</string>
    <string name="me_qingxutongji">退出登录</string>
    <string name="me_anquanyinsi">安全隐私</string>
    <string name="me_guanyuchengxu">关于软件</string>
    <string name="me_dingding">阿喵</string>
    <string name="emotion">便签</string>
    <string name="find">冲浪</string>
    <string name="me">个人</string>
    <string name="anquanyuyinsi">天机不可泄露</string>
    <string name="app">有待开发</string>
    <string name="delete">删除</string>
    <string name="quxiao">取消</string>

    <style name="AppTheme.NoActionBar">
        <item name="windowActionBar">false</item>
        <item name="windowNoTitle">true</item>
    </style>
</resources>
