<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.acer.myapplication.FindActivity">

    <TextView
        android:id="@+id/find_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/name_find_title"
        android:textSize="18sp"
        android:textColor="@color/colortitle" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#dcdcdc">

        <ListView
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:scrollbars="none"
            android:dividerHeight="5dp"
            android:background="#fdfdfd"
            android:id="@+id/news_lv">
        </ListView>

        <RadioGroup
            android:id="@+id/bottomGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:orientation="horizontal">-->
            <Button
                android:onClick="btn2Click"
                android:id="@+id/btn_Emotion2"
                style="@style/rg_btn_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/emotion"
                android:textSize="20dp"/>
            <Button
                android:onClick="btn2Click"
                android:id="@+id/btn_Find2"
                style="@style/rg_btn_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/find"
                android:textSize="20dp"/>
            <Button
                android:onClick="btn2Click"
                android:id="@+id/btn_Me2"
                style="@style/rg_btn_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/me"
                android:textSize="20dp"/>
        </RadioGroup>
    </FrameLayout>

</LinearLayout>
